# steel-capture

./: .gitignore  ARCHITECTURE.md  CLAUDE.md  Cargo.toml  HARDWARE.md  LICENSE  README.md  demo_sensor_data.json  demo_sensor_data_sample.json  gone_country_intro.json  run_test.sh  tab_raw.txt  test_viz.js  visualization.html  visualization_built.html  visualization_inline.html  viz.js
.github/workflows/: ci.yml
src/: audio_input.rs  bar_inference.rs  bar_sensor.rs  calibration.rs  calibrator.rs  console_display.rs  coordinator.rs  copedant.rs  data_logger.rs  dsp.rs  gui.rs  jsonl_reader.rs  lib.rs  main.rs  osc_sender.rs  serial_reader.rs  simulator.rs  string_detector.rs  types.rs  wav_player.rs  webview_app.rs  ws_server.rs
teensy/: steel_capture.ino
tests/: integration.rs
